--- a/css/grid.css
+++ b/css/grid.css
@@ -26,6 +26,10 @@
     flex-direction: column;
   }
 
+  .modal-content {
+        width: 100%;
+    }
+
 }
 
 @media only screen and (min-width: 600px) {
@@ -41,7 +45,7 @@
   .project-container {
     flex-direction: column;
   }
-
+  
 }
 
 @media only screen and (min-width: 992px) {
