fixed gallery layout

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -144,8 +144,12 @@ svg {
 }
 
 .gallery {
+  max-width: 100%;
+
   & img{
-    max-width: 30%;
+    max-width: 100%;
+    width: auto;
+    height: 15rem;
     margin: 0;
   }
 }
