--- a/css/grid.css
+++ b/css/grid.css
@@ -14,6 +14,11 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .nav a {
+    font-size: .8rem;
+    padding: .5rem;
+  }
+
   .container {
     margin-top: 5rem;
   }
@@ -45,7 +50,7 @@
   .project-container {
     flex-direction: column;
   }
-  
+
 }
 
 @media only screen and (min-width: 992px) {
