--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,10 @@ nav {
     width: 100%;
 }
 
+nav .icon {
+    display: none;
+}
+
 .active {
     color: $orange;
 }
@@ -156,23 +160,22 @@ figcaption {
 }
 
 img {
-    width: 95%;
+    max-width: 95%;
 }
 
 .selfimg {
-    width: auto;
+    max-width: auto;
 }
 
 .gallery {
-    max-width: 100%;
     margin-top: 5rem;
     display: flex;
     flex-flow: row wrap;
   
     & img{
+        align-self: flex-start;
         max-width: 100%;
-        width: auto;
-        height: 22em;
+        height: 15rem;
         margin: 0;
         padding: .5rem;
     }
@@ -199,4 +202,9 @@ img {
         opacity: 0.5;
         transition: 0.5s;
     }
+  }
+
+  iframe {
+    width: 100%;
+    height: 20rem;
   }
