--- a/css/grid.css
+++ b/css/grid.css
@@ -15,8 +15,42 @@
 }
 
 @media only screen and (max-width: 600px) {
+  body{
+    margin: auto;
+    padding: 0;
+  }
+
+  nav {
+    padding: 0;
+    margin: auto;
+    width: 100%;
+  }
+
+  .nav a {
+    display: none;
+  }
+
+  .nav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .nav.responsive a.icon {
+    position: relative;
+    display: block;
+    right: 0;
+    top: 0;
+  }
+
+  .nav.responsive a {
+    float: none;
+    display: block;
+    text-align: right;
+  }
+
   .container {
     margin-top: 5rem;
+    display: flex;
     flex-flow: column wrap;
   }
 
@@ -24,6 +58,11 @@
     flex-basis: 50%;
     margin: 1rem;
     padding: 1rem;
+  }
+
+  .gallery {
+    display: flex;
+    flex-flow: column wrap;
   }
 
 }
