--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ nav {
   width: 100%;
 }
 
+nav .icon {
+  display: none;
+}
+
 .active {
   color: rgb(218, 118, 26);
 }
@@ -130,15 +134,14 @@ figcaption {
 }
 
 img {
-  width: 95%;
+  max-width: 95%;
 }
 
 .selfimg {
-  width: auto;
+  max-width: auto;
 }
 
 .gallery {
-  max-width: 100%;
   margin-top: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -149,9 +152,10 @@ img {
           flex-flow: row wrap;
 }
 .gallery img {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   max-width: 100%;
-  width: auto;
-  height: 22em;
+  height: 15rem;
   margin: 0;
   padding: 0.5rem;
 }
@@ -176,4 +180,9 @@ img {
   opacity: 0.5;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+
+iframe {
+  width: 100%;
+  height: 20rem;
 }
