--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ $white: rgb(243, 243, 243);
 
 nav {
     position: fixed;
-    display: block;
+    display: flex;
     overflow: hidden;
     border: none;
     z-index: 1;
