--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 nav {
   position: fixed;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
   border: none;
   z-index: 1;
