--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 nav {
+  font-family: "Plastun";
   position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6,12 +7,14 @@ nav {
   overflow: hidden;
   border: none;
   z-index: 1;
-  background-color: rgb(243, 243, 243);
+  background-color: rgb(26, 23, 23);
   top: 0;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  font-size: 3rem;
+  font-size: 2rem;
   width: 100%;
+}
+nav a {
+  line-height: 3rem;
+  margin: 1rem;
 }
 
 nav .icon {
@@ -19,17 +22,13 @@ nav .icon {
 }
 
 .active {
-  color: rgb(218, 118, 26);
+  color: rgb(255, 202, 151);
 }
 
 body {
   font-family: "Roboto";
-  margin: 1rem;
-  padding: 1rem;
-  line-height: 2rem;
-  margin: 1rem;
-  background-color: rgb(243, 243, 243);
-  color: rgb(53, 46, 46);
+  background-color: rgb(26, 23, 23);
+  color: rgb(243, 243, 243);
 }
 
 em {
@@ -39,69 +38,99 @@ em {
 
 a {
   text-decoration: none;
-  color: rgb(53, 46, 46);
+  color: rgb(243, 243, 243);
   font-weight: bold;
-  line-height: 2rem;
-  margin: 1rem;
 }
 a:hover {
-  color: rgb(179, 18, 18);
+  color: rgb(255, 132, 132);
+  font-size: larger;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 ::-moz-selection {
-  background-color: rgb(179, 18, 18);
+  background-color: rgb(255, 132, 132);
   color: white;
 }
 
 ::selection {
-  background-color: rgb(179, 18, 18);
+  background-color: rgb(255, 132, 132);
   color: white;
 }
 
 ul {
+  margin: 1rem;
+  padding: 1rem;
+  line-height: 3rem;
+  margin: 1rem;
   list-style-type: none;
-  padding: 0;
+  font-size: 1.5rem;
+  line-height: 3rem;
 }
 
 h2 {
-  line-height: 2rem;
+  line-height: 3rem;
   margin: 1rem;
+  margin: 1rem;
+  padding: 1rem;
   font-family: "Special Elite";
 }
 
 h3 {
   font-family: "Rubik";
+  margin: 1rem;
+  padding: 1rem;
   -webkit-transform: rotate(-2deg);
           transform: rotate(-2deg);
-  font-size: 2rem;
+  font-size: 3rem;
+  line-height: 3rem;
   margin: 0;
 }
 
 h4 {
+  margin: 1rem;
+  padding: 1rem;
   font-family: "Roboto";
 }
 
 h1 {
   font-family: "Rubik";
+  margin: 1rem;
+  padding: 1rem;
   font-size: 5rem;
-  color: rgb(53, 46, 46);
+  color: rgb(243, 243, 243);
 }
 h1:hover {
-  color: rgb(179, 18, 18);
+  color: rgb(255, 132, 132);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
 p {
-  font-size: 1.1rem;
+  margin: 1rem;
+  padding: 1rem;
+  line-height: 3rem;
+  margin: 1rem;
+  font-size: 1.5rem;
   padding-top: 1rem;
 }
 
 figcaption {
+  line-height: 3rem;
+  margin: 1rem;
   font-size: 1rem;
+  font-weight: 900;
   padding-bottom: 1rem;
+}
+
+figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
 }
 
 .links {
@@ -114,17 +143,19 @@ figcaption {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 1rem;
+  padding: 1rem;
 }
 .links a {
   text-decoration: none;
   font-size: 3rem;
-  color: rgb(53, 46, 46);
+  color: rgb(243, 243, 243);
   font-weight: bold;
-  line-height: 2rem;
+  line-height: 3rem;
   margin: 1rem;
 }
 .links a:hover {
-  color: rgb(179, 18, 18);
+  color: rgb(255, 132, 132);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -143,45 +174,53 @@ img {
   max-width: auto;
 }
 
-.gallery {
-  margin-top: 5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-}
-.gallery img {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  max-width: 100%;
-  height: 15rem;
-  margin: 0;
-  padding: 0.5rem;
+.myImages {
+  margin-bottom: 1rem;
 }
 
 .link-box {
-  text-align: center;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  padding: 0.5rem;
+  position: relative;
+  width: 50%;
 }
 .link-box img {
   max-width: 100%;
-  height: 20rem;
-}
-.link-box p {
-  width: 20rem;
-  padding-top: 0;
-  margin-left: 1.5rem;
-  line-height: 1.5rem;
+  height: auto;
+  display: block;
 }
 .link-box :hover {
-  opacity: 0.5;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  opacity: 1;
+}
+.link-box .opacity {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  background-color: rgb(255, 132, 132);
+}
+
+.linkText {
+  color: rgb(243, 243, 243);
+  font-size: 3em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.links {
+  font-family: "Plastun";
 }
 
 iframe {
