--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@ $white: rgb(243, 243, 243);
 
 //mixins
 @mixin headerText {
-    font-family: $headerFont;   
+    font-family: $headerFont;
 }
 
 @mixin bodyText {
@@ -24,7 +24,7 @@ $white: rgb(243, 243, 243);
     line-height: 3rem;
     margin: 1rem;
 }
-  
+
 @mixin margins {
     margin: 1rem;
     padding: 1rem;
@@ -48,7 +48,7 @@ nav {
     // padding-bottom: 2rem;
     font-size: 2rem;
     width: 100%;
-    
+
     a {
         @include text-style;
     }
@@ -78,7 +78,7 @@ em {
 a {
     text-decoration: none;
     color: $white;
-    font-weight: bold; 
+    font-weight: bold;
     // @include text-style;
 
     &:hover {
@@ -86,7 +86,7 @@ a {
         font-size: larger;
         // opacity: 0.5;
         transition: 0.3s;
-    }  
+    }
 }
 
 ::selection {
@@ -177,7 +177,7 @@ figure {
 }
 
 .contact {
-    
+
     a {
         text-decoration: underline;
         margin: 1rem;
@@ -207,7 +207,7 @@ img {
 //     //     flex: 20%;
 //     //     max-width: 30%;
 //     // }
-  
+
 //     & img{
 //         align-self: flex-start;
 //         width: 100%;
@@ -216,7 +216,7 @@ img {
 //     }
 //   }
 
- .link-box {
+.link-box {
 
     position: relative;
     width: 50%;
@@ -230,7 +230,7 @@ img {
     & :hover {
         opacity: 1;
     }
-    
+
     & .opacity {
         opacity: 1;
     }
@@ -261,11 +261,12 @@ img {
     text-align: center;
 }
 
-  .links {
+.links {
     font-family: $navFont;
-  }
+}
 
-  iframe {
+iframe {
     width: 100%;
-    height: 500px;
-  }
+    height: 50rem;
+    padding: 1rem;
+}
