--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,7 +46,7 @@ nav {
     top: 0;
     // padding-top: 2rem;
     // padding-bottom: 2rem;
-    font-size: 2rem;
+    font-size: 2em;
     width: 100%;
 
     a {
@@ -83,7 +83,7 @@ a {
 
     &:hover {
         color: $red;
-        font-size: larger;
+        // font-size: larger;
         // opacity: 0.5;
         transition: 0.3s;
     }
@@ -105,7 +105,7 @@ ul {
 
 h2 {
     @include text-style;
-    @include margins;
+    // @include margins;
     font-family: $subheaderFont;
 }
 
@@ -159,11 +159,12 @@ figure {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    @include margins;
+    margin: 1rem;
+    // @include margins;
 
     & a {
         text-decoration: none;
-        font-size: 3rem;
+        font-size: 3em;
         color: $white;
         font-weight: bold;
         @include text-style;
@@ -191,6 +192,7 @@ img {
 
 .selfimg {
     max-width: auto;
+    @include margins;
 }
 
 .myImages {
@@ -251,6 +253,7 @@ img {
 
 .linkText {
     color: $white;
+    font-family: $subheaderFont;
     font-size: 3em;
     position: absolute;
     top: 50%;
