--- a/css/font.css
+++ b/css/font.css
@@ -1,9 +1,9 @@
-@font-face {
+/* @font-face {
     font-family: 'Rubik';
     font-weight: normal;
     font-style: normal;
     src: url('../fonts/Rubik_Vinyl/RubikVinyl-Regular.ttf') format('truetype');
-}
+} */
 
 @font-face {
     font-family: 'Roboto';
@@ -12,7 +12,7 @@
     src: url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype');
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Special Elite';
     font-weight: normal;
     font-style: normal;
@@ -24,5 +24,19 @@
     font-weight: normal;
     font-style: normal;
     src: url('../fonts/Plastun/Plastun Caps Textured.ttf') format('truetype');
+} */
+
+@font-face {
+    font-family: 'Young Serif';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/youngserif/youngserif-regular.ttf');
+}
+
+@font-face {
+    font-family: 'Coolvetica';
+    font-weight: normal;
+    font-style: normal;
+    src: url('../fonts/coolvetica/Coolvetica\ Rg.otf');
 }
 
